--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,10 +1,10 @@
 .container {
   padding: 40px;
-  text-align: center;
-  color: red;
+  text-align: left;
+  font-size: 24px;
 }
 
-.button {
+/* .button {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #007bff;
@@ -12,4 +12,4 @@
   color: white;
   border-radius: 8px;
   cursor: pointer;
-}
+} */
